--- a/src/views/logged_in.html
+++ b/src/views/logged_in.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div align="center">
-		<h1>Welcome, &lt;Name&gt;!</h1>
+		<h1>Welcome, {{ name }}!</h1>
 		<h2>You are now logged in</h2>
 		<a href="/">Logout</a>
 	</div>
