--- a/src/views/spoofed_face.html
+++ b/src/views/spoofed_face.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div align="center">
-		<h1>You're holding up an image! You're going to jail!!</h1>
+		<h1>You're holding up an image to the camera! I'm too smart for that...</h1>
 		<a href="/">Go Back</a>
 	</div>
 </body>
